Tell Cocoa explicitly that we want to see mouse move events when the pointer enters our window, so that we can change the cursor as needed.  Bug 161794, patch by nhamblen@mac.com, r=bryner [affects Camino build only]